2009-02-12  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-bread-crumb-trail.c
	(hildon_bread_crumb_trail_size_allocate):
	* src/hildon-calendar.c (hildon_calendar_set_background):
	* src/hildon-caption.c (hildon_caption_hierarchy_changed):
	* src/hildon-range-editor.c (hildon_range_editor_get_range):
	* src/hildon-seekbar.c (hildon_seekbar_init):
	* src/hildon-time-editor.c (hildon_time_editor_get_time):
	* src/hildon-time-selector.c (hildon_time_selector_finalize):
	* src/hildon-touch-selector-entry.c
	(hildon_touch_selector_get_text_from_model):
	* src/hildon-touch-selector.c (hildon_touch_selector_class_init):
	* src/hildon-window.c (hildon_window_finalize):

	Remove many unused variables.

2009-02-12  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-seekbar.c: (hildon_seekbar_init),
	(hildon_seekbar_size_request), (hildon_seekbar_size_allocate):

	Remove unnecessary g_assert() calls.

2009-02-12  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-caption.c: (hildon_caption_expose),
	(hildon_caption_set_property), (hildon_caption_init),
	(hildon_caption_set_focus), (hildon_caption_hierarchy_changed),
	(hildon_caption_size_request), (hildon_caption_size_allocate),
	(hildon_caption_forall), (hildon_caption_set_separator),
	(hildon_caption_activate), (hildon_caption_set_child_expand),
	(hildon_caption_set_label_text),
	(hildon_caption_get_label_alignment):

	Remove unnecessary g_assert() calls.

2009-02-12  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-banner.c
	(hildon_banner_map, hildon_banner_init): Make banner temporary
	before mapping it to avoid closing other temporary windows, but
	make it non-temporary afterwards to avoid being closed by other
	non-temporary windows.
	(-hildon_banner_client_event, hildon_banner_init):
	_GTK_DELETE_TEMPORARIES doesn't need to be handled anymore.

	Fixes: NB#100445 (Hildon banner gets destroyed when a dialog is
	opened)

2009-02-11  Alberto Garcia  <agarcia@igalia.com>
